--- a/document/main.tex
+++ b/document/main.tex
@@ -923,7 +923,7 @@ Assessing generalizability in the context of a mathematical model is a primarily
 
 \begin{labeling}{questions}
 	\item [RQ1] To what extent does M1 generalize to developers and concepts outside the set used to create the model?
-	\item [RQ2] Do developers agree with the factor (source code) used to develop M1?
+	\item [RQ2] What factors do developers perceive as contributors to their knowledge of programming concepts?
 \end{labeling}
 
 \subsubsection{Proposed methodology.}
