More work on why programming concepts and Fixes #44

--- a/document/main.bib
+++ b/document/main.bib
@@ -1086,6 +1086,14 @@ note={\url{https://github.com/jacoco/jacoco/issues/15}}
 	year={2014},
 	publisher={Springer}
 }
+@inproceedings{smith2015questions,
+	title={Questions developers ask while diagnosing potential security vulnerabilities with static analysis},
+	author={Smith, Justin and Johnson, Brittany and Murphy-Hill, Emerson and Chu, Bill and Lipford, Heather Richter},
+	booktitle={Proceedings of the 2015 10th Joint Meeting on Foundations of Software Engineering},
+	pages={248--259},
+	year={2015},
+	organization={ACM}
+}
 @Manual{RSoftware,
 	title = {R: A Language and Environment for Statistical Computing},
 	author = {{R Core Team}},
