--- a/document/main.tex
+++ b/document/main.tex
@@ -953,8 +953,9 @@ Assessing generalizability in the context of a mathematical model is a primarily
 \subsubsection{Research questions.}
 
 \begin{labeling}{questions}
-	\item [RQ1] To what extent does M1 generalize to developers and concepts outside the set used to create the model?
-	\item [RQ2] What factors do developers perceive as contributors to their knowledge of programming concepts?
+	\item [RQ1] To what extent does M1 generalize to developers outside the set used to create the model?
+	\item [RQ2] To what extent does M1 generalize to concepts outside the concept used to create the model?
+	\item [RQ3] What factors do developers perceive as contributors to their knowledge of programming concepts?
 \end{labeling}
 
 \subsubsection{Proposed methodology.}
@@ -963,8 +964,9 @@ I plan to explore the scalability of, and refine, M1 by combining qualitative fe
 \vspace{0.5em}
 \noindent\textit{Generalizability Assessments.}
 I built and assessed M1 using the same set of developers; one way I plan to assess the generalizability of M1 to other developers (RQ1) is by making predictions with a separate set of developers. Doing so will allow me to observe the ability for M1 to generalize to a wide range of developers. 
-To assess the scalability of M1 in regards to other concepts, I plan to analyze participant repositories for concept-specific code pertaining to others Java concepts.
+To assess the generalizability of M1 in regards to other concepts (RQ2), I plan to analyze participant repositories for concept-specific code pertaining to others Java concepts.
 % TODO how am I going to choose the 3? concepts where possible to get multi-concept notifications that include two or more??? To prepare for future study that adapts and assesses notifications 
+% TODO Specify what concepts you'll be doing. How many participants you'll get. How you'll recruit them. How long this effort will take compared to the prior CI, and why you think this one will be faster. (#69)
 To select the concepts for assessment, I plan to use the following criteria:
 \begin{itemize}
 	\item It is a concept that appears in program analysis tool notifications, particularly FindBugs which I plan to extend to assess the potential for adaptive notifications (Section~\ref{subsec:s5}).
@@ -981,11 +983,11 @@ I plan to evaluate M1 on at least three additional concepts.
 % TODO should this be another RQ (i.e. do developers agree with the relationship between source code and knowledge)??
 Another way I plan to assess the scalability of M1 is by conducting short, semi-structured interviews with developers (10--20) regarding their perceptions of source code and programming concept expertise (RQ2). Each interview will last approximately 30 minutes and will be divided into two phases: 1) their perception of the relationship between the code they write and their expertise regarding the concept and 2) their perception of the other factors that contribute to their knowledge of programming concepts.  
 
-To determine if source code is the only or best option to use as a proxy for knowledge, I plan to 1) code each transcript and 2) perform content analysis in R~\cite{RSoftware} on interview transcripts. Content analysis assumes that content most frequently mentioned is the most important. In order to perform content analysis, I need well defined categories; this is where the coding process comes into play. Using a methodology similar to the one in Section~\ref{subsec:s2}, I will code each transcript for statements pertaining to their knowledge of concepts and experiences that contributed knowledge for them. 
+To determine what factors developers consider as contributors to their knowledge, I plan to 1) code each transcript and 2) perform content analysis in R~\cite{RSoftware} on interview transcripts. Content analysis assumes that content most frequently mentioned is the most important. In order to perform content analysis, I need well defined categories; this is where the coding process comes into play. Using a methodology similar to the one in Section~\ref{subsec:s2}, I will code each transcript for statements pertaining to their knowledge of concepts and experiences that contributed knowledge for them. 
 
 Using the codes from the transcripts, I will perform content analysis to determine which factors developers feel contribute most to their knowledge.
 To validate source code as a factor, and other factors that emerged during the interviews, I plan to administer a survey to another set of developers (50--100). To encourage participation, and thereby increase the likelihood I will get a large set of responses, I plan to ask only one question: \emph{Which of the following contribute to your knowledge of programming concepts?}. I will include a definition and example of a programming concept so that participants are able to accurately respond. I will include each factor identified during the interviews as response options.
-I will determine the factors that contribute most to developer knowlede by running various analyses using R with data from the survey. Findings from both the qualitative and quantitative analyses will serve to potentially confirm current model building efforts and inform future data analysis and model building efforts.
+I will determine the factors that contribute most to developer knowledge by running various analyses using R with data from the survey. Findings from both the qualitative and quantitative analyses will serve to potentially confirm current model building efforts and inform future data analysis and model building efforts.
 
 
 \subsection{Are adaptive, knowledge-based notifications more effective than one-size-fits-all notifications? [SmartBugs]} \label{subsec:s5}
