--- a/document/main.tex
+++ b/document/main.tex
@@ -386,7 +386,7 @@ developers use, what could be improved \emph{and} why~\cite{Bessey:2010:Coverity
 \subsubsection{Research questions.}
 \begin{labeling}{questions}
 	\item [RQ1] What reasons do developers have for using or not using static analysis tools to find bugs?
-	\item [RQ2] How well do current static analysis tools fit into the workflows of developers? I define a workflow as the steps a developer takes when writing, inspecting and modifying their code.
+	\item [RQ2] How well do current static analysis tools fit into the workflows of developers? 
 	\item [RQ3] What improvements do developers want to see made to static analysis tools?
 \end{labeling}
 
@@ -429,7 +429,7 @@ getting stakeholders (in this case, our participants) involved in the design pro
 \vspace{0.5em}
 \noindent\textit{Coding Interview Responses.}
 After completing the interviews, I manually transcribed each interview. Then, I \textit{coded} the final transcripts. Coding is a process that is meant to make referencing transcriptions quicker and
-easier~\cite{Gordon:1998:Coding}. I used Gordon's basic steps to code the interviews. Before coding an interview, ``coding categories'' need to be defined. These should be general enough for relevant information to be grouped together but detailed enough that a concrete example only falls under one category. Because of this, it is possible to have ``emergent'' categories that may need to be defined after reading the transcriptions. The final set of coding categories, along with an example quote for each, are as follows: 
+easier~\cite{Gordon:1998:Coding}. I used Gordon's basic steps to code the interviews. Before coding an interview, ``coding categories'' need to be defined. These should be general enough for relevant information to be grouped together but detailed enough that a concrete example only falls under one category. For example, one coding category was \textbf{Workflows}, which I define as the steps a developer takes when writing, inspecting and modifying code. It is also possible to have ``emergent'' categories that may need to be defined after reading the transcriptions. The final set of coding categories, along with an example quote for each, are as follows: 
 
 \begin{description}
 	\item[Tool Output] -- Anything related to the output produced by the tool (for example, false positives). \hfill \\ \\
