--- a/document/main.tex
+++ b/document/main.tex
@@ -369,6 +369,8 @@ I have outlined my proposed research; next I will outline the studies, experimen
 \section{Experiments \& Evaluations}\label{sec:eval}
 % TODO think about RQs for each
 % why don't study (completed)
+This section outlines the research I have completed and propose to complete for my dissertation. For each study, I provide an abbreviated name in brackets ([]) to facilitate discussion about projects and results in later sections.
+
 \subsection{Why don't developers use static analysis tools to find bugs? [Reasons]}\label{subsec:s1}
 
 \subsubsection{Study rationale.} Static analysis tools provide a means for analyzing code without having to run
